--- a/gnome-doc-utils.pc.in
+++ b/gnome-doc-utils.pc.in
@@ -11,4 +11,4 @@ xsldoc=${xsltdir}/xsldoc/xsldoc.xsl
 
 Name: gnome-doc-utils
 Description: GNOME Documentation Utilities
-Version: 0.7.1-fake
+Version: @VERSION@
